--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Prakruthi</string>
+    <string name="Forget_password"> <u>Forgot Password? </u></string>
+    <string name="Register_an_account"> <u>Register an account </u></string>
 </resources>
